[gd_scene load_steps=38 format=2]

[ext_resource path="res://Entity/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 01.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 07.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 08.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 02.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 03.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 04.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 05.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/Idle 06.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 03.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 05.png" type="Texture" id=11]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 01.png" type="Texture" id=12]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 04.png" type="Texture" id=13]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 06.png" type="Texture" id=14]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/02-Run/Run 02.png" type="Texture" id=15]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 02.png" type="Texture" id=16]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 03.png" type="Texture" id=17]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 04.png" type="Texture" id=18]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 02.png" type="Texture" id=19]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 03.png" type="Texture" id=20]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 01.png" type="Texture" id=21]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/06-Anticipation/Anticipation 01.png" type="Texture" id=22]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/06-Anticipation/Anticipation 02.png" type="Texture" id=23]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/06-Anticipation/Anticipation 03.png" type="Texture" id=24]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 01.png" type="Texture" id=25]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 04.png" type="Texture" id=26]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/09-Dead Hit/Dead Hit 01.png" type="Texture" id=27]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/09-Dead Hit/Dead Hit 02.png" type="Texture" id=28]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 04.png" type="Texture" id=29]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 03.png" type="Texture" id=30]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 01.png" type="Texture" id=31]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/09-Dead Hit/Dead Hit 03.png" type="Texture" id=32]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 02.png" type="Texture" id=33]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Pink Star/09-Dead Hit/Dead Hit 04.png" type="Texture" id=34]
[ext_resource path="res://Entity/Starfish.gd" type="Script" id=35]
[ext_resource path="res://Sound/SFX/Entity/StarfishPop.wav" type="AudioStream" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "ready",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 26 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 29 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 34 ) ],
"loop": false,
"name": "hurt_dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Starfish" instance=ExtResource( 1 )]
script = ExtResource( 35 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "idle"
frame = 0
playing = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0.992749, 2.47766 )

[node name="CollisionShape2D" parent="Attack" index="0"]
disabled = true

[node name="DetectPlayer" parent="." index="6"]
cast_to = Vector2( 0, 225 )

[node name="AttackCooldown" type="Timer" parent="." index="7"]
wait_time = 3.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 36 )
volume_db = -5.0
bus = "SFX"

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
